--- a/index.html
+++ b/index.html
@@ -11,9 +11,24 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=League+Spartan:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    Hello
+    <header>
+      <p>mor705</p>
+      <h1>Watch</h1>
+      <p>
+        The watch also features a tough and durable sapphire a Swiss Sellita
+        SW200-1 automatic winding movement that has a power reserve
+      </p>
+      <a href="/">Buy watch</a>
+      <div>1700$</div>
+      <img
+        srcset="./images/mor705.png, ./images/mor705@2x.png 2x"
+        src="./images/mor705.png"
+        alt="Model mor705"
+      />
+    </header>
+    <main></main>
   </body>
 </html>
