--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <header>
-      <p>mor705</p>
-      <h1>Watch</h1>
+      <h1>mor705</h1>
+      <p>Watch</p>
       <p>
         The watch also features a tough and durable sapphire a Swiss Sellita
         SW200-1 automatic winding movement that has a power reserve
@@ -29,6 +29,46 @@
         alt="Model mor705"
       />
     </header>
-    <main></main>
+    <main>
+      <p>popular</p>
+      <p>Models</p>
+      <div>
+        <div>
+          <img
+            srcset="./images/son22.png, ./images/son22@2x.png 2x"
+            src="./images/son22.png"
+            alt="Model son22"
+          />
+          <h2>Son22</h2>
+          <p>
+            The watch also features a tough and durable sapphire crystal glass
+            and comes with a Swiss SW200-1 automatic winding movement that has a
+            power reserve.
+          </p>
+        </div>
+      </div>
+      <div>
+        <div>
+          <img
+            srcset="./images/sw12.png, ./images/sw12@2x.png 2x"
+            src="./images/sw12.png"
+            alt="Model sw12"
+          />
+          <h2>Sw12</h2>
+          <p>
+            The watch also features a tough and durable sapphire crystal glass
+            and comes with a Sw12-1 automatic winding
+          </p>
+        </div>
+      </div>
+      <p>Product description</p>
+      <p>
+        Inspired by the WWI trench watch, this timepiece has a contemporary
+        design with an urban style and a vintage soul. The 22 Design Studio
+        Concrete Sector Watch reinterprets the old timepiece with a concrete
+        dial. Handmade in Taiwan, the dial is cast in one piece using the béton
+        technique <a href="/">more detailed</a>
+      </p>
+    </main>
   </body>
 </html>
